syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";

option go_package =  "github.com/8thgencore/microservice-chat/pkg/chat/v1;chat_v1";


service ChatV1 {
    rpc Create(CreateChatRequest) returns (CreateChatResponse);
    rpc Delete(DeleteChatRequest) returns (Empty);
    rpc SendMessage(SendMessageRequest) returns (Empty);
}


message CreateChatRequest {
    repeated string usernames = 1;
}

message CreateChatResponse {
    int64 id = 1;
}

message DeleteChatRequest {
    int64 id = 1;
}

message SendMessageRequest {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message Empty {}
